--- a/WeatherBuddy/WeatherBuddy.UWP/WeatherBuddy.UWP.csproj
+++ b/WeatherBuddy/WeatherBuddy.UWP/WeatherBuddy.UWP.csproj
@@ -146,6 +146,9 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
     </PackageReference>
+    <PackageReference Include="PCLStorage">
+      <Version>1.0.2</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1560" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.10" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
