Star image to indicate favourite location

--- a/WeatherBuddy/WeatherBuddy.Android/WeatherBuddy.Android.csproj
+++ b/WeatherBuddy/WeatherBuddy.Android/WeatherBuddy.Android.csproj
@@ -91,14 +91,15 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\drawable\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\WeatherBuddy\WeatherBuddy.csproj">
       <Project>{6BA0B938-FA74-4DA3-9C57-9B5C12286701}</Project>
       <Name>WeatherBuddy</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\star.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
